k8s/home/frigate/resources/web-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      # nodeSelector:
      #   nvidia.com/gpu.present: 'true'
      #   nvidia.com/gpu.product: NVIDIA-GeForce-GTX-750-Ti-SHARED
      # runtimeClassName: nvidia
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: model-cache
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: config-map
          configMap:
            name: config
        - name: dev-shm
          emptyDir:
            medium: Memory
            sizeLimit: 256M
        - name: nfs-media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: dri
          hostPath:
            path: /dev/dri
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.16.2-tensorrt@sha256:7351ca2ddbce6d712c8a13842eeb4248844e5334565e71b4f6ae438ddaf9d04d
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
              # nvidia.com/gpu: 1
          securityContext:
            privileged: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: model-cache
              mountPath: /config/model_cache
            - name: config-map
              mountPath: /config/config.yaml
              subPath: frigate.yml
              readOnly: true
            - mountPath: /dev/shm
              name: dev-shm
            - name: nfs-media
              mountPath: /media
            - name: dri
              mountPath: /dev/dri
          ports:
            - name: http
              containerPort: 8871
            - name: rtsp
              containerPort: 8554
            - name: webrtc
              containerPort: 8555
            - name: webrtc-udp
              protocol: UDP
              containerPort: 8555
