k8s/home/frigate/resources/web-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: rtsp
      port: 8554
      targetPort: rtsp
    - name: webrtc
      port: 8555
      targetPort: webrtc
    - name: webrtc-udp
      port: 8555
      protocol: UDP
      targetPort: webrtc-udp
