k8s/home/frigate/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    gethomepage.dev/href: https://frigate.durbin.casa
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: frigate
    gethomepage.dev/group: Other
    gethomepage.dev/icon: frigate
    gethomepage.dev/name: Frigate
spec:
  ingressClassName: internal
  rules:
    - host: &host frigate.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
